# toolmaker

./: .gitignore  .gitlab-ci.yml  .style.yapf  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.rst  example.cfg  setup.cfg  setup.py  toolmaker.cfg  tox.ini
examples/: requirements.txt  toolmaker.cfg
src/toolmaker/: __init__.py  __main__.py  _i18n.py  _meta.py  cli.py  core.py  meta.py
test/: test_unit.py
