#


[check]
metadata = 1
strict = 1


[metadata]
name = toolmaker
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = toolmaker application
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    GitLab = https://gitlab.com/sinoroc/toolmaker
    GitHub = https://github.com/sinoroc/toolmaker
url = https://pypi.org/project/toolmaker/


[options]
install_requires =
    importlib_metadata
    pex[cachecontrol, requests]
    shiv
    zapp
package_dir =
    = src
packages = find:


[options.entry_points]
console_scripts =
    toolmaker = toolmaker.cli:main


[options.extras_require]
package =
    twine
    wheel
    zapp
test =
    astroid<2.3
    pylint<2.4
    pytest
    pytest-pycodestyle
    pytest-pylint


[options.packages.find]
where = src


[tool:pytest]
addopts =
    --pylint-error-types='CEFIRW'


# EOF
