#


[check]
metadata = 1
strict = 1


[metadata]
name = toolmaker
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = Make single-file builds of Python tools using zapp, shiv, or pex
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    GitLab = https://gitlab.com/sinoroc/toolmaker
    GitHub = https://github.com/sinoroc/toolmaker
url = https://pypi.org/project/toolmaker/


[options]
install_requires =
    importlib-metadata
    pex
    shiv
    zapp>=0.0.6
package_dir =
    = src
packages = find:


[options.entry_points]
console_scripts =
    toolmaker = toolmaker.cli:main


[options.extras_require]
package =
    twine
    wheel
    zapp
test =
    pytest
    pytest-pycodestyle
    pytest-pylint
    pytest-yapf3
    yapf


[options.packages.find]
where = src


[tool:pytest]
addopts =
    --disable-pytest-warnings
    --pylint-error-types='CEFIRW'
    --yapfdiff


# EOF
